--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<h1>Hi everyone :)</h1>
 					<p>I'm <span class="typed"></span>.</p>
 					<ul class="actions">
-						<li><a href="#one" class="button scrolly">Saber mas</a></li>
+						<li><a href="#one" class="button scrolly">Saber más</a></li>
 					</ul>
 				</div>
 			</section>
@@ -57,7 +57,7 @@
 				<div class="content">
 					<div class="inner">
 						<h2>Me llamo Brian Lopez Medina</h2>
-						<p>Apasionado por la tecnologia, lector, musico y dibujante en mis tiempos libres.</p>
+						<p>Apasionado por la tecnología, lector, musico y dibujante en mis tiempos libres.</p>
 					</div>
 				</div>
 			</section>
@@ -65,11 +65,11 @@
 				<a href="#" class="image"><img src="test2.jpeg" alt="" data-position="top center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Amante de la musica</h2>
-						<p>Me considero alguien muy creativo en todos los ambitos, pero destacaria mi amor por la musica, que llevo
+						<h2>Amante de la música</h2>
+						<p>Me considero alguien muy creativo en todos los ámbitos, pero destacaría mi amor por la música, que llevo
 							practicando desde los 6 años de edad.
 							<br/><br/>
-						En mis tiempos libres me gusta componer algunas melodias.</p>
+						En mis tiempos libres me gusta componer algunas melodías.</p>
 						<ul class="actions">
 							<li><a href="https://www.youtube.com/user/Andinopro123/videos" class="button">Abrir YouTube</a></li>
 						</ul>
@@ -80,9 +80,9 @@
 				<a href="#" class="image"><img src="test3.jpg" alt="" data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Fanatico de la tecnologia</h2>
-						<p>Desde chico siempre tuve un contacto muy cercano con la tecnologia gracias a mi padre, hoy en dia eso no ha cambiado
-							y orgullosamente conclui mi carrera en Ingenieria en Software.
+						<h2>Fanático de la tecnología</h2>
+						<p>Desde chico siempre tuve un contacto muy cercano con la tecnología gracias a mi padre, hoy en día eso no ha
+							 cambiado y orgullosamente concluí mi carrera en Ingeniería en Software.
 						</p>
 					</div>
 				</div>
@@ -93,33 +93,33 @@
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>Skills</h2>
-				<p>Me especializo en Frontend pero eso no es todo, tambien abarco diferentes habilidades como profesionista y manejo el idioma Ingles en caso de requerirse para mantenernos en una buena comunicación.</p>
+				<p>Me especializo en Frontend, pero eso no es todo, también abarco diferentes habilidades como profesionista y manejo el idioma Inglés en caso de requerirse para mantenernos en una buena comunicación.</p>
 				<div class="features">
 					<section>
 						<span class="icon solid major fa-code"></span>
-						<h3>Codigo / Diseño Limpio y Optimizado</h3>
-						<p>El codigo y el diseño en un sitio/app web es de suma importancia, tanto para el usuario final como para la escalabilidad de la plataforma.</p>
+						<h3>Código / Diseño Limpio y Optimizado</h3>
+						<p>El código y el diseño en un sitio/app web es de suma importancia, tanto para el usuario final como para la escalabilidad de la plataforma.</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-lock"></span>
 						<h3>Seguridad / Privacidad</h3>
-						<p>El salvaguardar informacion sensible y mantener un sitio seguro es importante, siempre hay que mantenerse actualizados ante cada inconveniente que sucede en la red.</p>
+						<p>El salvaguardar información sensible y mantener un sitio seguro es importante, siempre hay que mantenerse actualizados ante cada inconveniente que sucede en la red.</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-tools"></span>
 						<h3>Mantenimiento</h3>
-						<p>El estar en constante crecimiento es importante, por ello se realizan tambien labores de mantenimiento a cualquier proyecto en la red.</p>
+						<p>El estar en constante crecimiento es importante, por ello se realizan también labores de mantenimiento a cualquier proyecto en la red.</p>
 					</section>
 					<section>
 						<span class="icon solid major fas fa-drafting-compass"></span>
 						<h3>Arquitectura</h3>
-						<p>la arquitectura de software son patrones o lineamientos que ayudan a la construcción de un programa (aplicación). Estos patrones permiten tener una guia para los desarrolladores,
-							 analistas y todos los cargos relacionados para lograr cumplir con los requerimientos de la aplicación</p>
+						<p>La arquitectura de software son patrones o lineamientos que ayudan a la construcción de un programa (aplicación). Estos patrones permiten tener una guia para los desarrolladores,
+							 analistas y todos los cargos relacionados para lograr cumplir con los requerimientos de la aplicación.</p>
 					</section>
 					<section>
 						<span class="icon solid major fas fa-palette"></span>
 						<h3>UX / UI</h3>
-						<p>De nada sirve una aplicacion funcional si el diseño / usabilidad del sistema es pobre, tener un buen UX / UI nos garantiza un producto pulido y agradable para el usuario.</p>
+						<p>De nada sirve una aplicación funcional si el diseño / usabilidad del sistema es pobre, tener un buen UX / UI nos garantiza un producto pulido y agradable para el usuario.</p>
 					</section>
 					<section>
 						<span class="icon solid major fas fa-tasks"></span>
@@ -137,8 +137,8 @@
 		<!-- Three -->
 		<section id="three" class="wrapper style1 fade-up">
 			<div class="inner">
-				<h2>Contactame</h2>
-				<p>Contactame para poder ayudarte a cumplir tu/s proyectos o asesorarte en lo que pueda, siempre estare a tu servicio :)</p>
+				<h2>Contáctame</h2>
+				<p>Contáctame para poder ayudarte a cumplir tu/s proyectos o asesorarte en lo que pueda, siempre estaré a tu servicio :)</p>
 				<div class="split style1">
 					<!-- <section>
 						<form method="post" action="#">
