--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 					<section>
 						<ul class="contact">
 							<li>
-								<h3>Direccion</h3>
-								<span>Mexico</span>
+								<h3>Dirección</h3>
+								<span>México</span>
 							</li>
 							<li>
 								<h3>Email</h3>
