--- a/generic.html
+++ b/generic.html
@@ -5,59 +5,114 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-					</ul>
-				</nav>
-			</header>
+<head>
+	<title>Generic - Hyperspace by HTML5 UP</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<body class="is-preload">
 
-				<!-- Main -->
-					<section id="main" class="wrapper">
-						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-						</div>
-					</section>
+	<!-- Header -->
+	<header id="header">
+		<a href="index.html" class="title">BrianLM Portfolio</a>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+			</ul>
+		</nav>
+	</header>
 
-			</div>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+		<!-- Main -->
+		<section class="wrapper style2 spotlights">
+			<section>
+				<a href="#/" class="image"><img src="p1.jpeg" alt="" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Control de pacientes veterinaria</h2>
+						<p></p>
+						<ul class="actions">
+							<li><a href="https://fervent-shockley-679abd.netlify.app/" class="button">Abrir Proyecto</a>
+							</li>
+						</ul>
+					</div>
 				</div>
-			</footer>
+			</section>
+			<section>
+				<a href="#/" class="image imagenesport"><img src="p2.jpeg" alt="" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Control de Presupuesto</h2>
+						<ul class="actions">
+							<li><a href="https://awesome-nobel-f9139d.netlify.app/" class="button">Abrir Proyecto</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="#/" class="image" ><img src="p3.jpeg" alt="" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Diseño UI Móvil</h2>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="#/" class="image" ><img src="p4.jpeg" alt="" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Bolsa Criptomonedas</h2>
+						<ul class="actions">
+							<li><a href="https://sharp-nobel-9dd1da.netlify.app/" class="button">Abrir Proyecto</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="#/" class="image" ><img src="p5.jpeg" alt="" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Buscador de Gifs</h2>
+						<ul class="actions">
+							<li><a href="https://angry-lewin-473c45.netlify.app/" class="button">Abrir Proyecto</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+	<!-- Footer -->
+	<footer id="footer" class="wrapper alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Untitled. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
