--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					</section>
 				</div>
 				<ul class="actions">
-					<li><a href="https://github.com/BrianLopezM99" class="button">Proyectos realizados</a></li>
+					<li><a href="./proyectos.html" class="button">Proyectos realizados</a></li>
 				</ul>
 			</div>
 		</section>
