--- a/proyectos.html
+++ b/proyectos.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Generic - Hyperspace by HTML5 UP</title>
+	<title>Brian LM Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -78,8 +78,8 @@
 					</div>
 				</div>
 			</section>
-			<section>
-				<a href="#/" class="image" ><img src="p5.jpeg" alt="" data-position="center center" /></a>
+			<section style="color: black;">
+				<a href="#/" class="image"><img src="p5.jpeg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Buscador de Gifs</h2>
@@ -90,7 +90,6 @@
 					</div>
 				</div>
 			</section>
-		</section>
 
 	</div>
 
