--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<a href="#" class="image"><img src="test.jpg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Me llamo Brian Lopez Medina</h2>
+						<h2>Me llamo Brian López Medina</h2>
 						<p>Apasionado por la tecnología, lector, musico y dibujante en mis tiempos libres.</p>
 					</div>
 				</div>
