--- a/proyectos.html
+++ b/proyectos.html
@@ -34,7 +34,7 @@
 		<!-- Main -->
 		<section class="wrapper style2 spotlights">
 			<section>
-				<a href="#/" class="image"><img src="p1.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image" style="width: 50%;"><img src="p1.jpeg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Control de pacientes veterinaria</h2>
@@ -47,7 +47,7 @@
 				</div>
 			</section>
 			<section>
-				<a href="#/" class="image imagenesport"><img src="p2.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image imagenesport" style="width: 40%;"><img src="p2.jpeg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Control de Presupuesto</h2>
@@ -59,7 +59,7 @@
 				</div>
 			</section>
 			<section>
-				<a href="#/" class="image" ><img src="p3.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image" style="width: 50%;"><img src="p3.jpeg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Diseño UI Móvil</h2>
@@ -67,7 +67,7 @@
 				</div>
 			</section>
 			<section>
-				<a href="#/" class="image" ><img src="p4.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image" style="width: 40%;" ><img src="p4.jpeg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Bolsa Criptomonedas</h2>
@@ -79,7 +79,7 @@
 				</div>
 			</section>
 			<section style="color: black;">
-				<a href="#/" class="image"><img src="p5.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image" style="width: 70%;"><img src="p5.jpeg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Buscador de Gifs</h2>
@@ -87,6 +87,14 @@
 							<li><a href="https://angry-lewin-473c45.netlify.app/" class="button">Abrir Proyecto</a>
 							</li>
 						</ul>
+					</div>
+				</div>
+			</section>
+			<section style="color: black;">
+				<a href="#/" class="image" style="width: 40%;"><img src="p6.jpeg" alt="" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Diseño Landing Page</h2>
 					</div>
 				</div>
 			</section>
