--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 									</li>
 									<li><a href="https://www.instagram.com/briansonico/" class="icon brands fa-instagram"><span
 												class="label">Instagram</span></a></li>
-									<li><a href="https://www.linkedin.com/in/brian-l%C3%B3pez-medina-8902a4196/" class="icon brands fa-linkedin-in"><span
+									<li><a href="https://www.linkedin.com/in/brian-lopez-medina-8902a4196/" class="icon brands fa-linkedin-in"><span
 												class="label">LinkedIn</span></a></li>
 								</ul>
 							</li>
