feat: :sparkles: Agregado y personalizacion de portafolio web

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class="content">
 					<div class="inner">
 						<h2>Me llamo Brian López Medina</h2>
-						<p>Apasionado por la tecnología, lector, musico y dibujante en mis tiempos libres.</p>
+						<p>Soy desarrollador de software con mas de 3 años de experiencia en el sector, mis principales areas de trabajo son Frontend, Backend, web scraping y QA</p>
 					</div>
 				</div>
 			</section>
@@ -93,7 +93,7 @@
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>Skills</h2>
-				<p>Me especializo en Frontend, pero eso no es todo, también abarco diferentes habilidades como profesionista y manejo el idioma Inglés en caso de requerirse para mantenernos en una buena comunicación.</p>
+				<p>Soy desarrollador FullStack, con mas de 3 años de experiencia, pero eso no es todo, también abarco diferentes habilidades como profesionista y manejo el idioma Inglés en caso de requerirse para mantenernos en una buena comunicación.</p>
 				<div class="features">
 					<section>
 						<span class="icon solid major fa-code"></span>
@@ -130,6 +130,7 @@
 				</div>
 				<ul class="actions">
 					<li><a href="./proyectos.html" class="button">Proyectos realizados</a></li>
+					<li><a id="download-link" href="./BrianLopezMedinaCV.pdf" class="button">Descargar CV</a></li>
 				</ul>
 			</div>
 		</section>
@@ -179,14 +180,8 @@
 							<li>
 								<h3>Social</h3>
 								<ul class="icons">
-									<li><a href="https://twitter.com/AndinoWest" class="icon brands fa-twitter"><span
-												class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/brian.lopezmedina" class="icon brands fa-facebook-f"><span
-												class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a>
 									</li>
-									<li><a href="https://www.instagram.com/briansonico/" class="icon brands fa-instagram"><span
-												class="label">Instagram</span></a></li>
 									<li><a href="https://www.linkedin.com/in/brian-lopez-medina-8902a4196/" class="icon brands fa-linkedin-in"><span
 												class="label">LinkedIn</span></a></li>
 								</ul>
@@ -220,6 +215,11 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script>
+		document.getElementById("download-link").addEventListener("click", function() {
+		  // Código opcional para hacer algo antes de la descarga, por ejemplo, mostrar una barra de progreso
+		});
+	  </script>
 
 </body>
 
