--- a/proyectos.html
+++ b/proyectos.html
@@ -30,14 +30,22 @@
 
 	<!-- Wrapper -->
 	<div id="wrapper">
+		<div class="content" style="display: flex; justify-content: center; align-items: center; background-color: #5e42a6; border-top: 1px solid #3e2875;">
+			<div style="margin: auto;">
+				<h2>Proyectos</h2>
+				<h3>A continuacion puedes ver mis diferentes proyectos que han sido realizados de manera autonoma</h3>
+			</div>
+		</div>
 
 		<!-- Main -->
 		<section class="wrapper style2 spotlights">
 			<section>
-				<a href="#/" class="image" style="width: 50%;"><img src="p1.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image" style="width: 50%;"><img src="p1.jpeg" alt=""
+						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Control de pacientes veterinaria</h2>
+						<h3>Tecnologias utilizadas: React, HTML. CSS, LocalStorage</h3>
 						<p></p>
 						<ul class="actions">
 							<li><a href="https://fervent-shockley-679abd.netlify.app/" class="button">Abrir Proyecto</a>
@@ -47,10 +55,12 @@
 				</div>
 			</section>
 			<section>
-				<a href="#/" class="image imagenesport" style="width: 40%;"><img src="p2.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image imagenesport" style="width: 40%;"><img src="p2.jpeg" alt=""
+						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Control de Presupuesto</h2>
+						<h3>Tecnologias utilizadas: React, HTML. CSS, LocalStorage</h3>
 						<ul class="actions">
 							<li><a href="https://awesome-nobel-f9139d.netlify.app/" class="button">Abrir Proyecto</a>
 							</li>
@@ -59,18 +69,22 @@
 				</div>
 			</section>
 			<section>
-				<a href="#/" class="image" style="width: 50%;"><img src="p3.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image" style="width: 50%;"><img src="p3.jpeg" alt=""
+						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Diseño UI Móvil</h2>
+						<h3>Aplicacion para restaurante de sushi, realizada con figma</h3>
 					</div>
 				</div>
 			</section>
 			<section>
-				<a href="#/" class="image" style="width: 40%;" ><img src="p4.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image" style="width: 40%;"><img src="p4.jpeg" alt=""
+						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Bolsa Criptomonedas</h2>
+						<h3>Tecnologias utilizadas: React, HTML, CSS, Consumo de API coinbase</h3>
 						<ul class="actions">
 							<li><a href="https://sharp-nobel-9dd1da.netlify.app/" class="button">Abrir Proyecto</a>
 							</li>
@@ -79,10 +93,12 @@
 				</div>
 			</section>
 			<section style="color: black;">
-				<a href="#/" class="image" style="width: 70%;"><img src="p5.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image" style="width: 70%;"><img src="p5.jpeg" alt=""
+						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Buscador de Gifs</h2>
+						<h3>Tecnologias utilizadas: React, HTML, CSS, Consumo de API de Giphy</h3>
 						<ul class="actions">
 							<li><a href="https://angry-lewin-473c45.netlify.app/" class="button">Abrir Proyecto</a>
 							</li>
@@ -91,10 +107,27 @@
 				</div>
 			</section>
 			<section style="color: black;">
-				<a href="#/" class="image" style="width: 40%;"><img src="p6.jpeg" alt="" data-position="center center" /></a>
+				<a href="#/" class="image" style="width: 40%;"><img src="p6.jpeg" alt=""
+						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Diseño Landing Page</h2>
+						<h3>Pagina web desarrollada con el software de Figma</h3>
+					</div>
+				</div>
+			</section>
+			<section style="color: black;">
+				<a href="#/" class="image" style="width: 20%;"><img src="p7.jpeg" alt=""
+						data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Diseño app de noticias</h2>
+						<h3>Pagina/app de noticias realizada con Figma</h3>
+						<ul class="actions">
+							<li><a href="https://docs.google.com/document/d/1Ckc15UJbEKhqnXW4Ksjj5XUjLQZwibETAuPMIfRFJng/edit?usp=sharing"
+									class="button">Abrir Proyecto</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</section>
